# telephone_directory

./: .gitignore  README.md  export.py  handlers.py  imports.py  main.py  pyproject.toml  settings.py  view.py
database/: phone_book_db.csv
