[tool.poetry]
name = "phone-directory"
version = "0.1.0"
description = ""
authors = ["valhallajazzy <valhallajazzy@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
phonenumbers = "^8.13.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
